--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "bootstrap": "^4.4.1",
-    "crypto": "^1.0.1",
-    "dotenv": "^8.2.0",
-    "d3-fetch": "^1.1.2",
-    "d3-scale": "^3.2.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.4.1",
     "connect-mongo": "^3.2.0",
+    "crypto": "^1.0.1",
+    "d3-fetch": "^1.1.2",
+    "d3-scale": "^3.2.1",
+    "dotenv": "^8.2.0",
     "express": "^4.16.3",
     "express-session": "^1.17.1",
     "if-env": "^1.0.4",
@@ -36,6 +36,7 @@
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
-    "passport-local-mongoose": "^6.0.1"
+    "passport-local-mongoose": "^6.0.1",
+    "react-confetti": "^5.0.1"
   }
 }
