--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "express": "^4.16.3",
     "express-session": "^1.17.1",
     "if-env": "^1.0.4",
+    "jws": "^4.0.0",
     "mongoose": "^5.3.16",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
     "react-router-dom": "^5.1.2",
     "webpack": "4.42.0"
