--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
+    "react-confetti": "^5.0.1",
     "react-router-dom": "^5.1.2",
     "webpack": "4.42.0"
   }
