--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.28",
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
